// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gradient tests on iOS renders a Gradient 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": -0.07922796533956822,
        "y": 0.09442021232736122,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`Gradient tests on iOS renders a Gradient using array prop styles 1`] = `
<View
  style={
    Array [
      Object {
        "height": 200,
      },
      Object {
        "width": 200,
      },
    ]
  }
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": -0.07922796533956822,
        "y": 0.09442021232736122,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`Gradient tests on iOS renders a Gradient using prop styles 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": -0.07922796533956822,
        "y": 0.09442021232736122,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`Gradient tests on iOS renders a Gradient using stylesheets 1`] = `
<View
  style={
    Array [
      Object {
        "margin": 10,
      },
      Object {
        "height": 200,
      },
      Object {
        "width": 200,
      },
    ]
  }
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": -0.07922796533956822,
        "y": 0.09442021232736122,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (-45) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": -2.220446049250313e-16,
        "y": 0,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (45) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": 1,
        "y": -2.220446049250313e-16,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (90) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": 1.0000000000000002,
        "y": 0.9999999999999999,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (180) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": 1.8369701987210317e-16,
        "y": 1.000000000000001,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (270) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#F9F9F9",
        "#EDEDED",
      ]
    }
    end={
      Object {
        "x": 6.661338147750939e-16,
        "y": 2.449293598294705e-16,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;
